minimized squishing of pheads images (temp fix)

--- a/_sass/custom/behind-arw.sass
+++ b/_sass/custom/behind-arw.sass
@@ -36,6 +36,9 @@
 
     padding: 1rem 2rem
 
+.pheads-grid
+    grid-template-columns: 1.1fr 1.22fr 1fr 1fr
+
 .exec-grid
     display: grid
     gap: 1.5rem 4rem
